# nightMARE

./: .gitignore  CHANGELOG.MD  NOTICE.txt  README.md  pyproject.toml
nightMARE/: windows.py
nightMARE/analysis/: emulation.py  reversing.py
nightMARE/core/: bits.py  cast.py  regex.py  utils.py
nightMARE/core/compression/: lznt1.py
nightMARE/malware/agenttesla/: configuration.py
nightMARE/malware/asyncrat/: configuration.py
nightMARE/malware/blister/: configuration.py  crypto.py
nightMARE/malware/dcrat/: configuration.py
nightMARE/malware/deprecated/: __init__.py
nightMARE/malware/deprecated/icedid/: common.py  (+6 more)
nightMARE/malware/ghostpulse/: payload.py  payload_common.py  payload_idat.py  payload_pixels.py
nightMARE/malware/latrodectus/: crypto.py
nightMARE/malware/lobshot/: configuration.py  crypto.py
nightMARE/malware/lumma/: configuration.py
nightMARE/malware/netwire/: configuration.py
nightMARE/malware/nighthawk/: crypto.py
nightMARE/malware/njrat/: configuration.py
nightMARE/malware/quasarrat/: configuration.py
nightMARE/malware/redlinestealer/: configuration.py
nightMARE/malware/remcos/: c2.py  configuration.py  struct.py
nightMARE/malware/smokeloader/: configuration.py
nightMARE/malware/stealc/: configuration.py  crypto.py
nightMARE/malware/strelastealer/: payload.py
nightMARE/malware/vidar/: __init__.py  common.py  configuration.py  regex.py
nightMARE/malware/warmcookie/: configuration.py
nightMARE/malware/xorddos/: configuration.py  crypto.py
nightMARE/malware/xworm/: configuration.py
tests/: test_malware.py
(+9 files in other folders)
