[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nightMARE"
version = "0.13.2"
dependencies = [
    "unicorn==2.0.1",
    "lief==0.14.0",
    "capstone==5.0.0",
    "construct==2.10.70",
    "yara-python==4.5.1",
    "requests==2.32.3",
    "smda==1.13.23",
    "pycryptodome==3.21.0",
    "dotnetfile==0.2.4",
    "Pillow==11.0.0",
    "r2pipe",
]

requires-python = ">=3.10"
